MR 피드백 수정 1. 하위 메뉴 dot hover 시 색상 적용 (선택된 메뉴는 제외) 2. class 명 앞에 prefix z- 붙이기 3. 하위 메뉴 hover 시 부모도 hover 적용되는 현상 수정

--- a/src/main/resources/public/assets/theme/default/css/itsm.css
+++ b/src/main/resources/public/assets/theme/default/css/itsm.css
@@ -2938,10 +2938,10 @@ button .icon-plus {
   height: 25rem;
 }
 
-.gnb {
+.z-gnb {
   width: 13.75rem;
 }
-.gnb .navigation {
+.z-gnb .z-navigation {
   position: fixed;
   bottom: 0;
   width: 13.75rem;
@@ -2949,10 +2949,10 @@ button .icon-plus {
   background-color: #222529;
   z-index: 100;
 }
-.gnb .navigation .breadcrumb {
+.z-gnb .z-navigation .z-breadcrumb {
   display: none;
 }
-.gnb .navigation-config .notification-count {
+.z-gnb .z-navigation-config .z-notification-count {
   position: absolute;
   margin: 0.3125rem 1rem;
   padding: 0.125rem 0.625rem;
@@ -2964,28 +2964,28 @@ button .icon-plus {
   font-weight: 700;
   background-color: #929AA6;
 }
-.gnb .navigation-config .notification.active .notification-round {
+.z-gnb .z-navigation-config .z-notification.z-active .notification-round {
   fill: #0098FF;
 }
-.gnb .navigation-config .notification.active .notification-bell {
+.z-gnb .z-navigation-config .z-notification.z-active .notification-bell {
   fill: #FFFFFF;
 }
-.gnb .navigation-config .notification.active .notification-count {
+.z-gnb .z-navigation-config .z-notification.z-active .z-notification-count {
   color: #FFFFFF;
   background-color: #0098FF;
 }
-.gnb .navigation-config .user-info {
+.z-gnb .z-navigation-config .z-user-info {
   height: 3.125rem;
   padding: 0.6875rem 0 0.6875rem 1.3125rem;
 }
-.gnb .navigation-config .user-info .user-name {
+.z-gnb .z-navigation-config .z-user-info .z-user-name {
   display: inline-block;
   height: 1.688rem;
   line-height: 1.688rem;
   color: #929AA6;
   font-weight: 500;
 }
-.gnb .navigation-config .user-info .user-profile {
+.z-gnb .z-navigation-config .z-user-info .z-user-profile {
   display: inline-block;
   width: 1.688rem;
   height: 1.688rem;
@@ -2995,15 +2995,15 @@ button .icon-plus {
   margin-right: 0.625rem;
   vertical-align: middle;
 }
-.gnb .navigation-config .logout {
+.z-gnb .z-navigation-config .z-logout {
   height: 3.125rem;
   padding: 0.6875rem 0 0.6875rem 1.3125rem;
 }
-.gnb .navigation-config .logout .btn-logout {
+.z-gnb .z-navigation-config .z-logout .z-btn-logout {
   font-weight: 500;
   color: #929AA6;
 }
-.gnb .navigation-config .logout .icon-logout {
+.z-gnb .z-navigation-config .z-logout .z-icon-logout {
   margin-right: 0.875rem;
   width: 1.6875rem;
   height: 1.6875rem;
@@ -3015,10 +3015,10 @@ button .icon-plus {
   mask-position: center;
   background: #8B9094;
 }
-.gnb .navigation-config > div:hover {
+.z-gnb .z-navigation-config > div:hover {
   background: #505559;
 }
-.gnb .logo {
+.z-gnb .z-logo {
   position: fixed;
   width: 13.75rem;
   height: 3.375rem;
@@ -3026,7 +3026,7 @@ button .icon-plus {
   background-color: #222529;
   z-index: 100;
 }
-.gnb .menu {
+.z-gnb .z-menu {
   position: fixed;
   top: 3.375rem;
   width: 13.75rem;
@@ -3035,14 +3035,14 @@ button .icon-plus {
   z-index: 100;
   overflow: auto;
 }
-.gnb .menu .right {
+.z-gnb .z-menu .z-right {
   right: 0.375rem;
 }
-.gnb .menu-area .gnb {
+.z-gnb .z-menu-area .z-gnb {
   padding: 0.5rem 1.25rem 0.5rem 1.25rem;
   vertical-align: middle;
 }
-.gnb .menu-area .gnb .token-count {
+.z-gnb .z-menu-area .z-gnb .z-token-count {
   position: absolute;
   margin: 0.3125rem 9rem;
   padding: 0.125rem 0.625rem;
@@ -3055,34 +3055,32 @@ button .icon-plus {
   background-color: #8B9094;
   color: #E1E6EA;
 }
-.gnb .menu-area .gnb .token-count.active {
+.z-gnb .z-menu-area .z-gnb .z-token-count.z-active {
   color: #FFFFFF;
   background-color: #339AF0;
 }
-.gnb .menu-area .gnb-area {
+.z-gnb .z-menu-area .z-gnb-area {
   line-height: 1.3;
   font-weight: 500;
 }
-.gnb .menu-area .gnb-area:first-child {
+.z-gnb .z-menu-area .z-gnb-area:first-child {
   margin-top: 0.3125rem;
 }
-.gnb .menu-area .gnb-area:hover {
-  background: #505559;
-}
-.gnb .menu-area .gnb-area .gnb-link {
+.z-gnb .z-menu-area .z-gnb-area .z-gnb-link {
   cursor: pointer;
   color: #8B9094;
 }
-.gnb .menu-area .gnb-area .gnb-link:hover {
+.z-gnb .z-menu-area .z-gnb-area .z-gnb-link:hover {
   color: #E1E6EA;
+  background: #505559;
 }
-.gnb .menu-area .gnb-area .gnb-link .menu-name {
+.z-gnb .z-menu-area .z-gnb-area .z-gnb-link .z-menu-name {
   display: inline-block;
   padding-left: 1.1875rem;
   font-weight: 500;
   line-height: 1.3rem;
 }
-.gnb .menu-area .gnb-area .gnb-link .arrow-right {
+.z-gnb .z-menu-area .z-gnb-area .z-gnb-link .z-arrow-right {
   width: 0.75rem;
   height: 1.25rem;
   -webkit-mask-image: url("../media/icons/icon_menu_arrow_right.svg");
@@ -3096,7 +3094,7 @@ button .icon-plus {
   margin-left: auto;
   float: right;
 }
-.gnb .menu-area .gnb-area .gnb-link .arrow-down {
+.z-gnb .z-menu-area .z-gnb-area .z-gnb-link .z-arrow-down {
   width: 0.75rem;
   height: 1.25rem;
   -webkit-mask-image: url("../media/icons/icon_menu_arrow_bottom.svg");
@@ -3110,44 +3108,55 @@ button .icon-plus {
   margin-left: auto;
   float: right;
 }
-.gnb .menu-area .gnb-area .snb-group {
+.z-gnb .z-menu-area .z-gnb-area .z-snb-group {
   display: none;
   background-color: #222529;
 }
-.gnb .menu-area .gnb-area .snb-area {
+.z-gnb .z-menu-area .z-gnb-area .z-snb-area {
   font-size: 0.875rem;
   font-weight: 400;
   color: #8B9094;
 }
-.gnb .menu-area .gnb-area .snb-area:hover {
+.z-gnb .z-menu-area .z-gnb-area .z-snb-area:hover {
   background-color: #505559;
 }
-.gnb .menu-area .gnb-area .snb-area .snb-link {
+.z-gnb .z-menu-area .z-gnb-area .z-snb-area .z-snb-link {
   display: block;
   cursor: pointer;
 }
-.gnb .menu-area .gnb-area .snb-area .snb-link .menu-name {
+.z-gnb .z-menu-area .z-gnb-area .z-snb-area .z-snb-link .z-menu-name {
   display: inline-block;
   padding-left: 0.625rem;
 }
-.gnb .menu-area .gnb-area .snb-area .snb-link.snb {
+.z-gnb .z-menu-area .z-gnb-area .z-snb-area .z-snb-link.z-snb {
   padding: 0.5rem 1.25rem 0.5rem 1.25rem;
   color: #CFD5D9;
 }
-.gnb .menu-area .gnb-area .snb-area .snb-link.snb:hover {
+.z-gnb .z-menu-area .z-gnb-area .z-snb-area .z-snb-link.z-snb:hover:not(.z-active) {
   color: #E1E6EA;
 }
-.gnb .menu-area .gnb-area .snb-area .snb-link .icon-gnb-sub {
+.z-gnb .z-menu-area .z-gnb-area .z-snb-area .z-snb-link.z-snb:hover:not(.z-active) .z-dot {
+  width: 0.25rem;
+  height: 0.25rem;
+  -webkit-mask-image: url("../media/icons/gnb/icon_gnb_sub_dot.svg");
+  mask-image: url("../media/icons/gnb/icon_gnb_sub_dot.svg");
+  -webkit-mask-repeat: no-repeat;
+  mask-repeat: no-repeat;
+  -webkit-mask-position: center;
+  mask-position: center;
+  background: #E1E6EA;
+}
+.z-gnb .z-menu-area .z-gnb-area .z-snb-area .z-snb-link .z-icon-gnb-sub {
   margin-left: 40px;
   padding-left: 6px;
 }
-.gnb .menu-area .gnb-area .snb-area .snb-link.active {
+.z-gnb .z-menu-area .z-gnb-area .z-snb-area .z-snb-link.z-active {
   background-color: #171D21;
 }
-.gnb .menu-area .gnb-area .snb-area .snb-link.active .menu-name {
+.z-gnb .z-menu-area .z-gnb-area .z-snb-area .z-snb-link.z-active .z-menu-name {
   color: #FFFFFF;
 }
-.gnb .menu-area .gnb-area .snb-area .snb-link.active .dot {
+.z-gnb .z-menu-area .z-gnb-area .z-snb-area .z-snb-link.z-active .z-dot {
   width: 0.25rem;
   height: 0.25rem;
   -webkit-mask-image: url("../media/icons/gnb/icon_gnb_sub_dot.svg");
@@ -3158,25 +3167,25 @@ button .icon-plus {
   mask-position: center;
   background: #339AF0;
 }
-.gnb .menu-area .gnb.active {
+.z-gnb .z-menu-area .z-gnb.z-active {
   background-color: #171D21;
 }
-.gnb .menu-area .gnb.active .menu-name {
+.z-gnb .z-menu-area .z-gnb.z-active .z-menu-name {
   color: #FFFFFF;
 }
-.gnb .menu-area .gnb.active .icon-gnb {
+.z-gnb .z-menu-area .z-gnb.z-active .z-icon-gnb {
   background: #0098FF;
 }
-.gnb .menu-area .gnb.active-parent .menu-name {
+.z-gnb .z-menu-area .z-gnb.z-active-parent .z-menu-name {
   color: #FFFFFF;
 }
-.gnb .menu-area .gnb.active-parent .icon-gnb {
+.z-gnb .z-menu-area .z-gnb.z-active-parent .z-icon-gnb {
   background: #0098FF;
 }
-.gnb .menu-area .gnb.active-parent .arrow-right, .gnb .menu-area .gnb.active-parent .arrow-down {
+.z-gnb .z-menu-area .z-gnb.z-active-parent .z-arrow-right, .z-gnb .z-menu-area .z-gnb.z-active-parent .z-arrow-down {
   background: #FFFFFF;
 }
-.gnb .icon-gnb-board {
+.z-gnb .z-icon-gnb-board {
   width: 1.5rem;
   height: 1.5rem;
   -webkit-mask-image: url("../media/icons/gnb/icon_gnb_board.svg");
@@ -3187,7 +3196,7 @@ button .icon-plus {
   mask-position: center;
   background: #8B9094;
 }
-.gnb .icon-gnb-chart {
+.z-gnb .z-icon-gnb-chart {
   width: 1.5rem;
   height: 1.5rem;
   -webkit-mask-image: url("../media/icons/gnb/icon_gnb_chart.svg");
@@ -3198,7 +3207,7 @@ button .icon-plus {
   mask-position: center;
   background: #8B9094;
 }
-.gnb .icon-gnb-dashboard {
+.z-gnb .z-icon-gnb-dashboard {
   width: 1.5rem;
   height: 1.5rem;
   -webkit-mask-image: url("../media/icons/gnb/icon_gnb_dashboard.svg");
@@ -3209,7 +3218,7 @@ button .icon-plus {
   mask-position: center;
   background: #8B9094;
 }
-.gnb .icon-gnb-document {
+.z-gnb .z-icon-gnb-document {
   width: 1.5rem;
   height: 1.5rem;
   -webkit-mask-image: url("../media/icons/gnb/icon_gnb_document.svg");
@@ -3220,7 +3229,7 @@ button .icon-plus {
   mask-position: center;
   background: #8B9094;
 }
-.gnb .icon-gnb-download {
+.z-gnb .z-icon-gnb-download {
   width: 1.5rem;
   height: 1.5rem;
   -webkit-mask-image: url("../media/icons/gnb/icon_gnb_download.svg");
@@ -3231,7 +3240,7 @@ button .icon-plus {
   mask-position: center;
   background: #8B9094;
 }
-.gnb .icon-gnb-faq {
+.z-gnb .z-icon-gnb-faq {
   width: 1.5rem;
   height: 1.5rem;
   -webkit-mask-image: url("../media/icons/gnb/icon_gnb_faq.svg");
@@ -3242,7 +3251,7 @@ button .icon-plus {
   mask-position: center;
   background: #8B9094;
 }
-.gnb .icon-gnb-notice {
+.z-gnb .z-icon-gnb-notice {
   width: 1.5rem;
   height: 1.5rem;
   -webkit-mask-image: url("../media/icons/gnb/icon_gnb_notice.svg");
@@ -3253,7 +3262,7 @@ button .icon-plus {
   mask-position: center;
   background: #8B9094;
 }
-.gnb .icon-gnb-config {
+.z-gnb .z-icon-gnb-config {
   width: 1.5rem;
   height: 1.5rem;
   -webkit-mask-image: url("../media/icons/gnb/icon_gnb_config.svg");
@@ -3264,7 +3273,7 @@ button .icon-plus {
   mask-position: center;
   background: #8B9094;
 }
-.gnb .icon-gnb-workflow {
+.z-gnb .z-icon-gnb-workflow {
   width: 1.5rem;
   height: 1.5rem;
   -webkit-mask-image: url("../media/icons/gnb/icon_gnb_workflow.svg");
@@ -3275,7 +3284,7 @@ button .icon-plus {
   mask-position: center;
   background: #8B9094;
 }
-.gnb .icon-gnb-token {
+.z-gnb .z-icon-gnb-token {
   width: 1.5rem;
   height: 1.5rem;
   -webkit-mask-image: url("../media/icons/gnb/icon_gnb_token.svg");
@@ -3286,7 +3295,7 @@ button .icon-plus {
   mask-position: center;
   background: #8B9094;
 }
-.gnb .icon-gnb-cmdb {
+.z-gnb .z-icon-gnb-cmdb {
   width: 1.5rem;
   height: 1.5rem;
   -webkit-mask-image: url("../media/icons/gnb/icon_gnb_cmdb.svg");
@@ -5898,20 +5907,20 @@ body.modal-active {
   animation-direction: normal;
 }
 
-.notification {
+.z-notification {
   width: 100%;
   height: 3.125rem;
   padding: 0.6875rem 0 0.6875rem 1.3125rem;
   position: relative;
   display: inline-block;
 }
-.notification img, .notification button {
+.z-notification img, .z-notification button {
   margin: 0;
   border: none;
   background-color: transparent;
   cursor: pointer;
 }
-.notification-panel {
+.z-notification-panel {
   position: absolute;
   bottom: 0;
   left: calc(13.75rem + 0.3125rem);
@@ -5924,33 +5933,33 @@ body.modal-active {
   background-color: #FFFFFF;
   display: none;
 }
-.notification-panel.on {
+.z-notification-panel.z-on {
   display: block;
 }
-.notification-header {
+.z-notification-header {
   display: flex;
   height: 2.5rem;
   padding: 0 0.938rem;
   align-items: baseline;
   background-color: #0098FF;
 }
-.notification-header span {
+.z-notification-header span {
   display: inline-block;
   font-size: 0.875rem;
   font-weight: 400;
   color: #FFFFFF;
 }
-.notification-header span.title {
+.z-notification-header span.z-title {
   font-size: 1rem;
   font-weight: 500;
 }
-.notification-header span.total {
+.z-notification-header span.z-total {
   margin: auto 0.3125rem;
 }
-.notification-header span.message {
+.z-notification-header span.z-message {
   margin-left: 0.625rem;
 }
-.notification-header span.icon-close {
+.z-notification-header span.z-icon-close {
   width: 0.875rem;
   height: 0.875rem;
   margin-left: auto;
@@ -5964,28 +5973,28 @@ body.modal-active {
   mask-position: center;
   background: #FFFFFF;
 }
-.notification-body {
+.z-notification-body {
   overflow-y: auto;
   height: 20.63rem;
 }
-.notification-body.nodata {
+.z-notification-body.z-nodata {
   height: 6.875rem;
   padding: 0.938rem;
 }
-.notification-content {
+.z-notification-content {
   height: 6.875rem;
   padding: 0.938rem;
   border-bottom: 0.063rem solid #EBEBEB;
 }
-.notification-content:hover {
+.z-notification-content:hover {
   background-color: rgba(135, 206, 255, 0.1);
 }
-.notification-content .notification-checked {
+.z-notification-content .z-notification-checked {
   display: flex;
   margin: 0;
   background-color: #FFFFFF;
 }
-.notification-content .notification-checked input[type=checkbox] {
+.z-notification-content .z-notification-checked input[type=checkbox] {
   position: relative;
   display: inline-block;
   width: 1.125rem;
@@ -5999,12 +6008,12 @@ body.modal-active {
   -webkit-appearance: none;
   cursor: pointer;
 }
-.notification-content .notification-checked input[type=checkbox]:checked {
+.z-notification-content .z-notification-checked input[type=checkbox]:checked {
   border: 0.063rem solid #EBEBEB;
   color: #CCCED1;
   cursor: unset;
 }
-.notification-content .notification-checked input[type=checkbox]:checked::after {
+.z-notification-content .z-notification-checked input[type=checkbox]:checked::after {
   content: "✔";
   position: absolute;
   top: -0.063rem;
@@ -6012,7 +6021,7 @@ body.modal-active {
   font-size: 1rem;
   color: #CCCED1;
 }
-.notification-content .icon-remove {
+.z-notification-content .z-icon-remove {
   padding: 0;
   width: 1.125rem;
   height: 1.25rem;
@@ -6024,7 +6033,7 @@ body.modal-active {
   mask-position: center;
   background: #CCCED1;
 }
-.notification-content span.title {
+.z-notification-content span.z-title {
   max-width: 18.13rem;
   margin-left: 0.625rem;
   font-weight: 500;
@@ -6032,14 +6041,14 @@ body.modal-active {
   line-height: 1.2;
   color: #3F4B56;
 }
-.notification-content span.title.confirm {
+.z-notification-content span.z-title.z-confirm {
   opacity: 0.75;
 }
-.notification-content span.title:hover {
+.z-notification-content span.z-title:hover {
   cursor: pointer;
   text-decoration: underline;
 }
-.notification-content span.message {
+.z-notification-content span.z-message {
   display: block;
   max-width: 22.5rem;
   min-height: 2.5rem;
@@ -6048,10 +6057,10 @@ body.modal-active {
   font-size: 1rem;
   color: #586872;
 }
-.notification-content span.message.confirm {
+.z-notification-content span.z-message.z-confirm {
   color: #ACB4BF;
 }
-.notification-content span.date {
+.z-notification-content span.z-date {
   margin-left: 1.75rem;
   font-weight: 400;
   font-size: 0.875rem;
