--- a/src/main/resources/public/template/layout/defaultLayout.html
+++ b/src/main/resources/public/template/layout/defaultLayout.html
@@ -10,7 +10,7 @@
 		<div class="alice-wrapper">
 			<div class="itsm-container flex-row">
 				<div>
-					<div class="gnb">
+					<div class="z-gnb">
 						<th:block th:replace="layout/menu">menu</th:block>
 						<th:block th:replace="layout/navigation">menu</th:block>
 					</div>
