--- a/src/main/resources/public/template/layout/menu.html
+++ b/src/main/resources/public/template/layout/menu.html
@@ -11,33 +11,33 @@
 * 4) 그룹메뉴는 하위의 메뉴를 열거나 펼칠때만 사용되고 실제 연결은 모두 연결메뉴에서 담당한다.
 * 5) 현재는 2단계의 메뉴 깊이로 고정한다.
 */-->
-	<div class="menu">
-		<div class="menu-area">
+	<div class="z-menu">
+		<div class="z-menu-area">
 			<ul>
-				<li class="gnb-area" th:each="topMenu : ${#authentication.details.menus}"
+				<li class="z-gnb-area" th:each="topMenu : ${#authentication.details.menus}"
 						th:order-data="${topMenu.sort}" th:if="${topMenu.pMenuId} == 'menu' and ${topMenu.useYn} == true">
 					<!--/* 그룹 메뉴 */-->
-					<a th:if="${#strings.isEmpty(topMenu.url)}" onclick="accordionMenu(this);" th:data-menugroup="${topMenu.menuId}" class="gnb gnb-link flex-row"
-					   th:classappend="${topMenu.menuId} == ${session.active_url_parent} ? active-parent">
-						<span th:class="'icon-gnb icon-gnb-' + ${topMenu.menuId}"></span>
-						<span class="menu-name" th:text="#{|menu.${topMenu.menuId}.parent|}"></span>
-						<span class="arrow-right"></span>
+					<a th:if="${#strings.isEmpty(topMenu.url)}" onclick="accordionMenu(this);" th:data-menugroup="${topMenu.menuId}" class="z-gnb z-gnb-link flex-row"
+					   th:classappend="${topMenu.menuId} == ${session.active_url_parent} ? z-active-parent">
+						<span th:class="'z-icon-gnb z-icon-gnb-' + ${topMenu.menuId}"></span>
+						<span class="z-menu-name" th:text="#{|menu.${topMenu.menuId}.parent|}"></span>
+						<span class="z-arrow-right"></span>
 					</a>
-					<ul th:if="${#strings.isEmpty(topMenu.url)}" th:id="${topMenu.menuId}" class="snb-group">
-						<li class="snb-area" th:each="subMenu : ${#authentication.details.menus}"
+					<ul th:if="${#strings.isEmpty(topMenu.url)}" th:id="${topMenu.menuId}" class="z-snb-group">
+						<li class="z-snb-area" th:each="subMenu : ${#authentication.details.menus}"
 							th:order-data="${subMenu.sort}" th:if="${subMenu.pMenuId} == ${topMenu.menuId} and ${subMenu.useYn} == true">
-							<a th:href="${subMenu.url}"  th:class="'snb snb-link ' + ${#strings.substringAfter(subMenu.menuId,'.')}" onclick="showProgressBar()"
-							   th:classappend="${subMenu.url} == ${session.active_url} ? active">
-								<span class="icon-gnb-sub dot"></span>
-								<span class="menu-name" th:text="#{|menu.${subMenu.menuId}|}"></span>
+							<a th:href="${subMenu.url}"  th:class="'z-snb z-snb-link ' + ${#strings.substringAfter(subMenu.menuId,'.')}" onclick="showProgressBar()"
+							   th:classappend="${subMenu.url} == ${session.active_url} ? z-active">
+								<span class="z-icon-gnb-sub z-dot"></span>
+								<span class="z-menu-name" th:text="#{|menu.${subMenu.menuId}|}"></span>
 							</a>
 						</li>
 					</ul>
 					<!--/* 연결 메뉴 */-->
-					<a th:unless="${#strings.isEmpty(topMenu.url)}" th:href="${topMenu.url}" class="gnb gnb-link flex-row" th:classappend="${topMenu.url} == ${session.active_url} ? active">
-						<span th:class="'icon-gnb icon-gnb-' + ${topMenu.menuId}"></span>
-						<span class="menu-name" th:text="#{|menu.${topMenu.menuId}.parent|}"></span>
-						<span th:if="${topMenu.menuId == 'token'}" class="token-count align-center active" id="token_count">12</span>
+					<a th:unless="${#strings.isEmpty(topMenu.url)}" th:href="${topMenu.url}" class="z-gnb z-gnb-link flex-row" th:classappend="${topMenu.url} == ${session.active_url} ? z-active">
+						<span th:class="'z-icon-gnb z-icon-gnb-' + ${topMenu.menuId}"></span>
+						<span class="z-menu-name" th:text="#{|menu.${topMenu.menuId}.parent|}"></span>
+						<span th:if="${topMenu.menuId == 'token'}" class="z-token-count align-center z-active" id="token_count">12</span>
 					</a>
 				</li>
 			</ul>
@@ -48,27 +48,27 @@
 /*<![CDATA[ */
 	function accordionMenu(element) {
 		if (document.getElementById(element.dataset.menugroup).style.display === 'block') {
-			element.querySelector('.arrow-down').className = 'arrow-right';
+			element.querySelector('.z-arrow-down').className = 'z-arrow-right';
 		} else {
-			element.querySelector('.arrow-right').className = 'arrow-down';
+			element.querySelector('.z-arrow-right').className = 'z-arrow-down';
 		}
 		aliceJs.slideToggle(document.getElementById(element.dataset.menugroup), 200);
 	}
 
 	window.addEventListener('DOMContentLoaded', function(){
-		if (document.querySelector('.active-parent') != null) {
+		if (document.querySelector('.z-active-parent') != null) {
 			const evt = document.createEvent('HTMLEvents');
 			evt.initEvent('click', false, true);
-			document.querySelector('.active-parent').dispatchEvent(evt);
+			document.querySelector('.z-active-parent').dispatchEvent(evt);
 		}
 
-		OverlayScrollbars(document.querySelector('.menu'), {
+		OverlayScrollbars(document.querySelector('.z-menu'), {
 			className: 'inner-scrollbar-dark',
 			callbacks: {
 				onInitialized: function() {
 					const verticalScrollTrack = document.querySelector('.os-scrollbar-vertical').firstChild;
 					const verticalScrollHandle = verticalScrollTrack.firstChild;
-					verticalScrollTrack.classList.add('right');
+					verticalScrollTrack.classList.add('z-right');
 				}
 			}
 		});
