추가 수정 1. 색상값을 변수에서 가져오도록 변경

--- a/src/main/resources/public/assets/theme/default/css/itsm.css
+++ b/src/main/resources/public/assets/theme/default/css/itsm.css
@@ -3174,13 +3174,13 @@ button .icon-plus {
   color: #FFFFFF;
 }
 .z-gnb .z-menu-area .z-gnb.z-active .z-icon-gnb {
-  background: #0098FF;
+  background: #339AF0;
 }
 .z-gnb .z-menu-area .z-gnb.z-active-parent .z-menu-name {
   color: #FFFFFF;
 }
 .z-gnb .z-menu-area .z-gnb.z-active-parent .z-icon-gnb {
-  background: #0098FF;
+  background: #339AF0;
 }
 .z-gnb .z-menu-area .z-gnb.z-active-parent .z-arrow-right, .z-gnb .z-menu-area .z-gnb.z-active-parent .z-arrow-down {
   background: #FFFFFF;
