--- a/src/main/resources/public/scss/theme/default/_variables.scss
+++ b/src/main/resources/public/scss/theme/default/_variables.scss
@@ -24,6 +24,14 @@ $menu-selected-color:                         $white;
 $menu-hover-color:                            $gray200;
 $menu-font:                                   1rem; // 16px;
 $menu-snb-font:                               0.875rem; // 14px;
+$menu-count-bg-color:                         $gray500;
+$menu-count-color:                            $gray200;
+$menu-count-bg-active-color:                  $blue500;
+$menu-count-active-color:                     $white;
+$menu-snb-color:                              $gray300;
+$menu-snb-dot-selected-color:                 $blue500;
+$menu-snb-dot-hover:                          $gray200;
+$menu-active-color:                           $blue500;
 
 // Menu Icons
 $icon-gnb-color:                              $gray500;
