--- a/src/main/resources/public/scss/theme/default/_gnb.scss
+++ b/src/main/resources/public/scss/theme/default/_gnb.scss
@@ -116,11 +116,11 @@
         line-height: inherit;
         font-size: 0.688rem; // 11px
         font-weight: $font-weight-medium;
-        background-color: $gray500;
-        color: $gray200;
+        background-color: $menu-count-bg-color;
+        color: $menu-count-color;
         &.z-active {
-          color: $white;
-          background-color: $blue500;
+          color: $menu-count-active-color;
+          background-color: $menu-count-bg-active-color;
         }
       }
       &-area {
@@ -174,12 +174,12 @@
               }
               &.z-snb {
                 padding: 0.5rem 1.25rem 0.5rem 1.25rem; // 8px 20px 8px 20px
-                color: $gray300;
+                color: $menu-snb-color;
                 &:hover {
                   &:not(.z-active) {
                     color: $menu-hover-color;
                     .z-dot {
-                      @include maskImage($icon-gnb-sub-dot, 0.25rem, 0.25rem, no-repeat, center, null, $gray200); // 4xp 4px
+                      @include maskImage($icon-gnb-sub-dot, 0.25rem, 0.25rem, no-repeat, center, null, $menu-snb-dot-hover); // 4xp 4px
                     }
                   }
                 }
@@ -190,9 +190,9 @@
               }
               &.z-active {
                 background-color: $menu-bg-selected-color;
-                .z-menu-name { color: $white; }
+                .z-menu-name { color: $menu-selected-color; }
                 .z-dot {
-                  @include maskImage($icon-gnb-sub-dot, 0.25rem, 0.25rem, no-repeat, center, null, $blue500); // 4xp 4px
+                  @include maskImage($icon-gnb-sub-dot, 0.25rem, 0.25rem, no-repeat, center, null, $menu-snb-dot-selected-color); // 4xp 4px
                 }
               }
             }
@@ -202,13 +202,13 @@
   
       &.z-active {
         background-color: $menu-bg-selected-color;
-        .z-menu-name { color: $white; }
-        .z-icon-gnb { background: $blue; }
+        .z-menu-name { color: $menu-selected-color; }
+        .z-icon-gnb { background: $menu-active-color; }
       }
       &.z-active-parent {
-        .z-menu-name { color: $white; }
-        .z-icon-gnb { background: $blue; }
-        .z-arrow-right, .z-arrow-down { background: $white; }
+        .z-menu-name { color: $menu-selected-color; }
+        .z-icon-gnb { background: $menu-active-color; }
+        .z-arrow-right, .z-arrow-down { background: $menu-selected-color; }
       }
     }
   }
